# SPDX-FileCopyrightText: © 2022 The Flvx Authors <>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "flvx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "A high-level functional API for developing reactive stream-driven applications"
homepage = "https://kyper.io/flvx"
documentation = "https://docs.rs/flvx"
repository = "https://github.com/kyper-io/flvx"
readme = "../../README.md"

[dependencies]
