# SPDX-FileCopyrightText: © 2022 The Flvx Authors <https://github.com/kyper-io/flvx/blob/93b71a116950410b2c86dcc6efdd0031a2f79f84/AUTHORS>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "flvx"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "A high-level functional API for developing reactive stream-driven applications"
homepage = "https://kyper.io/flvx"
documentation = "https://docs.rs/flvx"
repository = "https://github.com/kyper-io/flvx"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
